# vertex-cover

./: Cargo.toml  flake.nix  graph0.out  graph1.in  graph1.out  graph2.dot  graph2.in  graph3.dot  graph3.out  graph4.dot  graph4.in  graph4.out  graph5.dot  graph5.out  graph6.dot  graph6.out  solutions  validator.py
benches/: sample_graphs.rs
src/: bitvec.rs  lib.rs  main.rs
